java-solutions/ru/ifmo/rain/zhukov/bank/testErr
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:3: error: package org.junit does not exist
import org.junit.Assert;
                ^
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:4: error: package org.junit does not exist
import org.junit.Before;
                ^
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:5: error: package org.junit does not exist
import org.junit.BeforeClass;
                ^
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:6: error: package org.junit does not exist
import org.junit.Test;
                ^
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:28: error: cannot find symbol
    @BeforeClass
     ^
  symbol:   class BeforeClass
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:39: error: cannot find symbol
    @Before
     ^
  symbol:   class Before
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:61: error: cannot find symbol
    @Test
     ^
  symbol:   class Test
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:100: error: cannot find symbol
    @Test
     ^
  symbol:   class Test
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:107: error: cannot find symbol
    @Test
     ^
  symbol:   class Test
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:114: error: cannot find symbol
    @Test
     ^
  symbol:   class Test
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:131: error: cannot find symbol
    @Test
     ^
  symbol:   class Test
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:163: error: cannot find symbol
    @Test
     ^
  symbol:   class Test
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:200: error: cannot find symbol
    @Test
     ^
  symbol:   class Test
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:50: error: cannot find symbol
        Assert.assertEquals(expectedId, actual.getId());
        ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:51: error: cannot find symbol
        Assert.assertEquals(expectedAmmount, actual.getAmount());
        ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:56: error: cannot find symbol
        Assert.assertEquals(expectedName, actual.getName());
        ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:57: error: cannot find symbol
        Assert.assertEquals(expectedSurname, actual.getSurname());
        ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:58: error: cannot find symbol
        Assert.assertEquals(expectedPassportId, actual.getPassportId());
        ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:63: error: cannot find symbol
        Assert.assertNull(bank.getPerson(PASSPORT_ID, true));
        ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:65: error: cannot find symbol
        Assert.assertNotNull(person);
        ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:80: error: cannot find symbol
            Assert.assertNull(person.getAccount(accountId));
            ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:82: error: cannot find symbol
            Assert.assertNotNull(account);
            ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:89: error: cannot find symbol
            Assert.assertNotNull(account);
            ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:121: error: cannot find symbol
        Assert.assertNotNull(otherAccount);
        ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:138: error: cannot find symbol
        Assert.assertNull(localAccount);
        ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:143: error: cannot find symbol
        Assert.assertNotNull(localAccount);
        ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:174: error: cannot find symbol
        Assert.assertNull(remoteAccount);
        ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:175: error: cannot find symbol
        Assert.assertNull(otherLocalAccount);
        ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:181: error: cannot find symbol
        Assert.assertNull(remoteAccount);
        ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:182: error: cannot find symbol
        Assert.assertNull(otherLocalAccount);
        ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:188: error: cannot find symbol
        Assert.assertNotNull(localAccount);
        ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:205: error: cannot find symbol
            Assert.assertNull(bank.getPerson(Integer.toString(ids[i - 1]), true));
            ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:207: error: cannot find symbol
            Assert.assertNotNull(person);
            ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:221: error: cannot find symbol
            Assert.assertNotNull(person);
            ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:228: error: cannot find symbol
            Assert.assertNotNull(account);
            ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:235: error: cannot find symbol
            Assert.assertNotNull(person);
            ^
  symbol:   variable Assert
  location: class BankTest
H:\TEMP\java\java-advanced-private\test\_current-repo\java-solutions\ru\ifmo\rain\zhukov\bank\BankTest.java:237: error: cannot find symbol
            Assert.assertNotNull(account);
            ^
  symbol:   variable Assert
  location: class BankTest
37 errors
